# OpenWorld

./: CITATION.cff  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  ROADMAP.md  pyproject.toml  world-models-primer.md
adapters/: README.md
benchmark/: transform.py
data/: README.md  schema.md
data/results/: clip_results.json
docs/: adding_a_model.md  methodology.md  quickstart.md
domain_adapters/: README.md
findings/: README.md  results.json
findings/scripts/: plot_shortcut_camera_effect.py
openworld/: __init__.py
openworld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
openworld/benchmarks/: __init__.py  base.py  demo_clips.py  transform.py
openworld/interventions/: background_removal.py  base.py
openworld/metrics/: __init__.py  centroid_gap.py  dci.py  invariance.py  nn_geometry.py  silhouette.py
openworld/models/: base.py  dreamer.py  videomae.py  vjepa2.py
