[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openworld"
version = "0.0.1"
description = "An open-source SDK for evaluating, comparing, and adapting world models."
authors = [
    { name = "UW InfoSeeking Lab" },
    { name = "RAISE Center for Responsible AI" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]
models = [
    "transformers",
    "torch",
    "einops"
]

[project.urls]
Repository = "https://github.com/InfoSeeking/OpenWorld"

[tool.setuptools.packages.find]
where = ["."]
include = ["openworld*"]